# LionLog

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/collector/: main.cpp
apps/query/: main.cpp
apps/write/: main.cpp
example/: main.cpp
include/: LogFormatter.h  LogLevel.h  LogRecord.h  Logger.h  ThreadPool.h
include/sinks/: ConsoleSink.h  FileSink.h  LogSink.h  RollingFileSink.h
include/tool/: GzipUtil.h
src/: ConsoleSink.cpp  FileSink.cpp  GzipUtil.cpp  LogFormatter.cpp  Logger.cpp  RollingFileSink.cpp  ThreadPool.cpp
tests/: test.cpp
